--- a/src/components/PokemonDetail/components/BaseStats/styles.module.scss
+++ b/src/components/PokemonDetail/components/BaseStats/styles.module.scss
@@ -7,21 +7,25 @@
   .item {
     width: 100%;
     display: flex;
+    // justify-content: space-around;
+    // align-items: center;
 
     span {
       font-weight: bold;
       font-size: 14px;
       text-transform: uppercase;
       text-align: right;
-      width: 20%;
+      width: 18%;
       margin: 0 1rem;
       padding-right: 1rem;
       border-right: 1px solid #e0e0e0;
     }
 
     .rigth {
-      width: 60%;
+      width: 70%;
       display: flex;
+      align-items: center;
+      gap: 20px;
 
       p {
         width: 10%;
@@ -47,5 +51,14 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: 400px) {
+  .item {
+    justify-content: space-around;
+  }
+  .rigth {
+    margin-right: 16px;
   }
 }
